--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div id="opening-screen">
+        <div class="opening-content">
+            <h1 class="header_text">I have a message for you...</h1>
+            <button class="romantic-btn yes-button" onclick="openMessage()">Click to Open 💌</button>
+        </div>
+    </div>
+
     <div id="bg-overlay"></div>
 
     <svg width="0" height="0" style="position:absolute;">
@@ -18,10 +25,10 @@
         </defs>
     </svg>
 
-    <div id="heart-background"></div>
+    <div id="heart-background"></div> 
     <div id="flower-container"></div>
 
-    <div id="question-container" class="container">
+    <div id="question-container" class="container" style="display: none;">
         <h1 id="main-title">Habibi would you like to become my Valentine?</h1>
         <div class="buttons">
             <button class="yes-button romantic-btn" onclick="handleYesClick()">Yes</button>
@@ -42,6 +49,11 @@
             </video>
         </div>
     </div>
+
+    <audio id="bg-music" loop>
+        <source src="merijaan.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
 
     <script src="script.js"></script>
 </body>
